--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header></header>
-  <main>ステージング環境</main>
+  <main>ステージング環境basic認証対応</main>
   <footer></footer>
   <script src="./js/main.js"></script>
 </body>
