--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,51 @@
   <title>Document</title>
 </head>
 <body>
-  <header></header>
-  <main>ステージング環境basic認証対応</main>
+  <header class="header">
+    <div class="logo">
+      <p class="logo__text">
+        MEI NAKAMURA PORTFOLIO
+      </p>
+    </div>
+    <div class="menu-icon" onclick="changeIcon(this)">
+      <span class="menu-icon__bar"></span>
+      <span class="menu-icon__bar"></span>
+      <span class="menu-icon__bar"></span>
+    </div>
+  </header>
+  <main class="main">
+    <div class="flex-layout">
+      <div class="sidemenu flex-layout__side">
+        <a class="sidemenu__link" href="#">WORKS</a>
+        <a class="sidemenu__link" href="#">
+          WEB DESIGN<br>
+          LOGO / ILLUSTRATION<br>
+          VISUAL DESIGN
+        </a>
+        <a class="sidemenu__link" href="#">ABOUT</a>
+      </div>
+      <div class="main-visual flex-layout__main">
+        <img class="main-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+        <div class="main-visual__link" href="#">
+          <a class="visual-link">
+            <span class="visual-link__text--grey">WEB</span>
+            <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
+          </a>
+        </div>
+        <div class="scrollbar">
+          <span class="scrollbar__text">SCROLL</span>
+          <img class="scrollbar__img" src="./assets/images/scrollbar.svg" alt="スクロールバー">
+        </div>
+      </div>
+      <div class="scroll-now flex-layout__side">
+        <span class="scroll-now__item">01</span>
+        <span class="scroll-now__item--current">02</span>
+        <span class="scroll-now__divider"></span>
+        <span class="scroll-now__item--current">15</span>
+        <span class="scroll-now__item">03</span>
+      </div>
+    </div>
+  </main>
   <footer></footer>
   <script src="./js/main.js"></script>
 </body>
