--- a/app/about.html
+++ b/app/about.html
@@ -25,41 +25,37 @@
       <div class="sidemenu flex-layout__side">
         <a class="sidemenu__link" href="#">WORKS</a>
         <a class="sidemenu__link" href="#">
-          WEB DESIGN<br>
-          LOGO / ILLUSTRATION<br>
-          VISUAL DESIGN
+          <span class="sidemenu__text-min">WEB DESIGN</span><br>
+          <span class="sidemenu__text-min">LOGO / ILLUSTRATION</span><br>
+          <span class="sidemenu__text-min">VISUAL DESIGN</span>
         </a>
-        <a class="sidemenu__link" href="#">ABOUT</a>
+        <a class="sidemenu__link--active" href="#">ABOUT</a>
       </div>
       <div class="main-visual flex-layout__main">
         <img class="main-visual__img" src="./assets/images/sky.jpg" alt="メインのパイの実画像">
-        <div class="info">
-          <p class="info__title">中村 めい</p>
-          <span class="info__sub">MEI NAKAMURA</span>
-          <div class="dotted-line"></div>
-          <p class="info__text">
-            ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。<br>
-            ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。
-          </p>
+        <div class="flex-wrap">
+          <div class="flex-wrap__textbar textbar">
+            <!-- <span class="textbar__bar"></span> -->
+            <span class="textbar__text">ABOUT</span>
+          </div>
+          <div class="flex-wrap__info info">
+            <p class="info__title">中村 めい</p>
+            <span class="info__sub">MEI NAKAMURA</span>
+            <div class="dotted-line"></div>
+            <p class="info__text">
+              ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。<br>
+              ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。ダミーテキストを入力します。
+            </p>
+          </div>
         </div>
         <div class="main-visual__btn">
-          <div class="black-btn">BACK TO TOP</div>
+          <div class="black-stroked-btn">BACK TO TOP</div>
         </div>
-        <div class="textbar">
-          <span class="textbar__bar"></span>
-          <span class="textbar__text">ABOUT</span>
-        </div>
-      </div>
-      <div class="scroll-now flex-layout__side">
-        <span class="scroll-now__item">01</span>
-        <span class="scroll-now__item--current">02</span>
-        <span class="scroll-now__divider"></span>
-        <span class="scroll-now__item--current">15</span>
-        <span class="scroll-now__item">03</span>
       </div>
     </div>
   </main>
   <footer></footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./js/main.js"></script>
 </body>
 </html>
