works.html sp 作成

--- a/app/about.html
+++ b/app/about.html
@@ -14,7 +14,7 @@
         MEI NAKAMURA PORTFOLIO
       </p>
     </div>
-    <div class="menu-icon" onclick="changeIcon(this)">
+    <div class="menu-icon">
       <span class="menu-icon__bar"></span>
       <span class="menu-icon__bar"></span>
       <span class="menu-icon__bar"></span>
