--- a/app/works.html
+++ b/app/works.html
@@ -14,7 +14,7 @@
         MEI NAKAMURA PORTFOLIO
       </p>
     </div>
-    <div class="menu-icon" onclick="changeIcon(this)">
+    <div class="menu-icon">
       <span class="menu-icon__bar"></span>
       <span class="menu-icon__bar"></span>
       <span class="menu-icon__bar"></span>
@@ -25,14 +25,11 @@
       <div class="main-visual">
         <img class="main-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
       </div>
-      <!-- <div class="main-visual__btn">
-        <div class="black-btn">BACK TO TOP</div>
-      </div> -->
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
           <span class="info__sub02">WEB DESIGH</span>
           <p class="info__title02">LOTTE パイの実 BRAND SITE</p>
-          <div class="info__btn">
+          <div class="info__btn pc">
             <div class="black-btn">VISIT WEBSITE</div>
           </div>
         </div>
@@ -47,6 +44,9 @@
           <p class="info__text">
             株式会社ロッテ「パイの実」の40周年を記念した、リブランディングを含むブランドサイト制作。ダミーテキストここにテキストを入力します。ダミーテキストここにテキストを入力します。ダミーテキストここにテキストを入力します。ダミーテキストここにテキストを入力します。ダミーテキストここにテキストを入力します。
           </p>
+          <div class="info__btn sp">
+            <div class="black-btn">VISIT WEBSITE</div>
+          </div>
         </div>
         <div class="flex-wrap__item">
           <img class="works-img" src="./assets/images/pc_pienomi01.jpg" alt="パイの実画像">
@@ -72,6 +72,7 @@
       <div class="white-stroked-btn right">NEXT PROJECT</div>
     </div>
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./js/main.js"></script>
 </body>
 </html>
