index修正 font-family追加

--- a/app/index.html
+++ b/app/index.html
@@ -41,16 +41,15 @@
     </div>
   </header>
   <main class="main">
-    <div class="container-fluid">
       <div class="flex-layout">
         <div class="sidemenu flex-layout__side">
           <a class="sidemenu__link" href="#">WORKS</a>
           <a class="sidemenu__link" href="#">
-            WEB DESIGN<br>
-            LOGO / ILLUSTRATION<br>
-            VISUAL DESIGN
+            <span class="sidemenu__text-min">WEB DESIGN</span><br>
+            <span class="sidemenu__text-min">LOGO / ILLUSTRATION</span><br>
+            <span class="sidemenu__text-min">VISUAL DESIGN</span>
           </a>
-          <a class="sidemenu__link" href="#">ABOUT</a>
+          <a class="sidemenu__link--active" href="#">ABOUT</a>
         </div>
         <div class="main-visual flex-layout__main">
           <img class="main-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
@@ -62,10 +61,10 @@
           </div>
           <div class="scrollbar">
             <span class="scrollbar__text">SCROLL</span>
-            <img class="scrollbar__img" src="./assets/images/scrollbar.svg" alt="スクロールバー">
+            <img class="scrollbar__img" src="./assets/images/scrollbar.gif" alt="スクロールバー">
           </div>
         </div>
-        <div class="scroll-now flex-layout__side">
+        <div class="scroll-now flex-layout__side02">
           <span class="scroll-now__item">01</span>
           <span class="scroll-now__item--current">02</span>
           <span class="scroll-now__divider"></span>
@@ -73,7 +72,6 @@
           <span class="scroll-now__item">03</span>
         </div>
       </div>
-    </div>
   </main>
   <footer></footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
