--- a/app/about.html
+++ b/app/about.html
@@ -8,6 +8,26 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="mask">
+    <div class="accordion-list">
+      <a class="accordion-list__link" href="#">
+        <span class="accordion-list__text">01</span>
+        <span class="accordion-list__text--primary">WORKS</span>
+        <span class="accordion-list__text">SOME CASE</span>
+      </a>
+      <a class="accordion-list__link" href="#">
+        <span class="accordion-list__text">02</span>
+        <span class="accordion-list__text--primary">ABOUT</span>
+        <span class="accordion-list__text">MY PHILOSOPHY</span>
+      </a>
+      <a class="accordion-list__link" href="#">
+        <span class="accordion-list__text">00</span>
+        <span class="accordion-list__text">m.design1100@gmail.com</span>
+        <span class="accordion-list__text">SAY HELLO !</span>
+      </a>
+    </div>
+  </div>
+
   <header class="header">
     <div class="logo">
       <p class="logo__text">
@@ -32,7 +52,7 @@
         <a class="sidemenu__link--active" href="#">ABOUT</a>
       </div>
       <div class="main-visual flex-layout__main">
-        <img class="main-visual__img" src="./assets/images/sky.jpg" alt="メインのパイの実画像">
+        <img class="main-visual__img" src="./assets/images/sky.jpg" alt="空画像">
         <div class="flex-wrap">
           <div class="flex-wrap__textbar textbar">
             <!-- <span class="textbar__bar"></span> -->
