--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
         <span class="accordion-list__text--primary">ABOUT</span>
         <span class="accordion-list__text">MY PHILOSOPHY</span>
       </a>
-      <a class="accordion-list__link" href="#">
+      <a class="accordion-list__link" href="mailto:m.design1100@gmail.com">
         <span class="accordion-list__text">00</span>
         <span class="accordion-list__text">m.design1100@gmail.com</span>
         <span class="accordion-list__text">SAY HELLO !</span>
@@ -52,37 +52,36 @@
       <a class="sidemenu__link--active" href="#">ABOUT</a>
     </div>
     <div class="main-fix">
-      <div class="main-visual">
-        <img class="main-visual__img pc" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
-        <img class="main-visual__img sp" src="./assets/images/sp_pie.jpg" alt="メインのパイの実画像">
-        <div class="main-visual__link" href="#">
+      <div class="top-visual">
+        <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+        <div class="top-visual__link" href="#">
           <a class="visual-link">
             <span class="visual-link__text--grey">WEB</span>
             <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
           </a>
         </div>
       </div>
-      <div class="main-visual">
-        <div class="main-visual__img dummy-img">1</div>
-        <div class="main-visual__link" href="#">
+      <div class="top-visual">
+        <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+        <div class="top-visual__link" href="#">
           <a class="visual-link">
             <span class="visual-link__text--grey">WEB</span>
             <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
           </a>
         </div>
       </div>
-      <div class="main-visual">
-        <div class="main-visual__img dummy-img">2</div>
-        <div class="main-visual__link" href="#">
+      <div class="top-visual">
+        <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+        <div class="top-visual__link" href="#">
           <a class="visual-link">
             <span class="visual-link__text--grey">WEB</span>
             <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
           </a>
         </div>
       </div>
-      <div class="main-visual">
-        <div class="main-visual__img dummy-img">3</div>
-        <div class="main-visual__link" href="#">
+      <div class="top-visual">
+        <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+        <div class="top-visual__link" href="#">
           <a class="visual-link">
             <span class="visual-link__text--grey">WEB</span>
             <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
