修正箇所の直し

--- a/app/index.html
+++ b/app/index.html
@@ -12,19 +12,21 @@
   <div class="mask">
     <div class="accordion-list">
       <a class="accordion-list__link" href="#">
-        <span class="accordion-list__text">01</span>
-        <span class="accordion-list__text--primary">WORKS</span>
-        <span class="accordion-list__text">SOME CASE</span>
+        <span class="accordion-list__text fadein-under">01</span>
+        <span class="accordion-list__text--primary fadein-under">WORKS</span>
+        <span class="accordion-list__text fadein-under">SOME CASE</span>
       </a>
+      <div class="border fadein-left"></div>
       <a class="accordion-list__link" href="#">
-        <span class="accordion-list__text">02</span>
-        <span class="accordion-list__text--primary">ABOUT</span>
-        <span class="accordion-list__text">MY PHILOSOPHY</span>
+        <span class="accordion-list__text fadein-under s3">02</span>
+        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
+      <div class="border fadein-left s3"></div>
       <a class="accordion-list__link" href="mailto:m.design1100@gmail.com">
-        <span class="accordion-list__text">00</span>
-        <span class="accordion-list__text">m.design1100@gmail.com</span>
-        <span class="accordion-list__text">SAY HELLO !</span>
+        <span class="accordion-list__text fadein-under s45">00</span>
+        <span class="accordion-list__text fadein-under s45">m.design1100@gmail.com</span>
+        <span class="accordion-list__text fadein-under s45">SAY HELLO !</span>
       </a>
     </div>
   </div>
@@ -43,49 +45,160 @@
   </header>
   <main class="main">
     <div class="sidemenu sidemenu--fix">
-      <a class="sidemenu__link" href="#">WORKS</a>
+      <a class="sidemenu__link active" href="#">WORKS</a>
       <a class="sidemenu__link" href="#">
         <span class="sidemenu__text-min">WEB DESIGN</span><br>
         <span class="sidemenu__text-min">LOGO / ILLUSTRATION</span><br>
         <span class="sidemenu__text-min">VISUAL DESIGN</span>
       </a>
-      <a class="sidemenu__link--active" href="#">ABOUT</a>
+      <a class="sidemenu__link" href="#">ABOUT</a>
     </div>
     <div class="main-fix">
       <div class="top-visual">
-        <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
-        <div class="top-visual__link" href="#">
-          <a class="visual-link">
-            <span class="visual-link__text--grey">WEB</span>
-            <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">WEB</span>
+              <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="top-visual">
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">WEB</span>
+              <span class="visual-link__text">MAQuillAGE　LOOKBOOK</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="top-visual">
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">WEB</span>
+              <span class="visual-link__text">MAQuillAGE　LOOKBOOK</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="top-visual">
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">WEB</span>
+              <span class="visual-link__text">Q16GiRL</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="top-visual">
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">WEB</span>
+              <span class="visual-link__text">
+                LINE MOOK "in PINK HAPPY <br>
+                SECRET <br>
+        </div>
+              by BVLGARI"
+            </span>
           </a>
         </div>
       </div>
       <div class="top-visual">
-        <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
-        <div class="top-visual__link" href="#">
-          <a class="visual-link">
-            <span class="visual-link__text--grey">WEB</span>
-            <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
-          </a>
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">WEB</span>
+              <span class="visual-link__text">ITRIM</span>
+            </a>
+          </div>
         </div>
       </div>
       <div class="top-visual">
-        <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
-        <div class="top-visual__link" href="#">
-          <a class="visual-link">
-            <span class="visual-link__text--grey">WEB</span>
-            <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
-          </a>
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">WEB</span>
+              <span class="visual-link__text">syncstock</span>
+            </a>
+          </div>
         </div>
       </div>
       <div class="top-visual">
-        <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
-        <div class="top-visual__link" href="#">
-          <a class="visual-link">
-            <span class="visual-link__text--grey">WEB</span>
-            <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
-          </a>
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">LOGO</span>
+              <span class="visual-link__text">INTERNSHIP AWARD</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="top-visual">
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">LOGO</span>
+              <span class="visual-link__text">AMG solution</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="top-visual">
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">ILLUSTRATION</span>
+              <span class="visual-link__text">MAQuillAGE ルージュミニ</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="top-visual">
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">ILLUSTRATION</span>
+              <span class="visual-link__text">inupathy</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="top-visual">
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">ILLUSTRATION</span>
+              <span class="visual-link__text">MILLOR</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="top-visual">
+        <div class="top-visual__inner">
+          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          <div class="top-visual__link" href="#">
+            <a class="visual-link">
+              <span class="visual-link__text--grey">VISUAL</span>
+              <span class="visual-link__text">名刺</span>
+            </a>
+          </div>
         </div>
       </div>
     </div>
