修正箇所works about展開

--- a/app/about.html
+++ b/app/about.html
@@ -12,19 +12,21 @@
   <div class="mask">
     <div class="accordion-list">
       <a class="accordion-list__link" href="#">
-        <span class="accordion-list__text">01</span>
-        <span class="accordion-list__text--primary">WORKS</span>
-        <span class="accordion-list__text">SOME CASE</span>
+        <span class="accordion-list__text fadein-under">01</span>
+        <span class="accordion-list__text--primary fadein-under">WORKS</span>
+        <span class="accordion-list__text fadein-under">SOME CASE</span>
       </a>
+      <div class="border fadein-left"></div>
       <a class="accordion-list__link" href="#">
-        <span class="accordion-list__text">02</span>
-        <span class="accordion-list__text--primary">ABOUT</span>
-        <span class="accordion-list__text">MY PHILOSOPHY</span>
+        <span class="accordion-list__text fadein-under s3">02</span>
+        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
-      <a class="accordion-list__link" href="#">
-        <span class="accordion-list__text">00</span>
-        <span class="accordion-list__text">m.design1100@gmail.com</span>
-        <span class="accordion-list__text">SAY HELLO !</span>
+      <div class="border fadein-left s3"></div>
+      <a class="accordion-list__link" href="mailto:m.design1100@gmail.com">
+        <span class="accordion-list__text fadein-under s45">00</span>
+        <span class="accordion-list__text fadein-under s45">m.design1100@gmail.com</span>
+        <span class="accordion-list__text fadein-under s45">SAY HELLO !</span>
       </a>
     </div>
   </div>
