ドロアメニュー速度調整

--- a/app/index.html
+++ b/app/index.html
@@ -16,13 +16,13 @@
         <span class="accordion-list__text--primary fadein-under">WORKS</span>
         <span class="accordion-list__text fadein-under">SOME CASE</span>
       </a>
-      <div class="border fadein-left"></div>
+      <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="#">
         <span class="accordion-list__text fadein-under s3">02</span>
         <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
-      <div class="border fadein-left s3"></div>
+      <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="mailto:m.design1100@gmail.com">
         <span class="accordion-list__text fadein-under s45">00</span>
         <span class="accordion-list__text fadein-under s45">m.design1100@gmail.com</span>
