修正箇所訂正 05/16

--- a/app/about.html
+++ b/app/about.html
@@ -25,7 +25,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="mailto:m.design1100@gmail.com">
         <span class="accordion-list__text fadein-under s45">00</span>
-        <span class="accordion-list__text fadein-under s45">m.design1100@gmail.com</span>
+        <span class="accordion-list__text--secondary fadein-under s45">m.design1100@gmail.com</span>
         <span class="accordion-list__text fadein-under s45">SAY HELLO !</span>
       </a>
     </div>
@@ -48,11 +48,11 @@
       <div class="sidemenu flex-layout__side">
         <a class="sidemenu__link" href="#">WORKS</a>
         <a class="sidemenu__link" href="#">
-          <span class="sidemenu__text-min">WEB DESIGN</span><br>
-          <span class="sidemenu__text-min">LOGO / ILLUSTRATION</span><br>
+          <span class="sidemenu__text-min">WEB DESIGN</span>
+          <span class="sidemenu__text-min">LOGO / ILLUSTRATION</span>
           <span class="sidemenu__text-min">VISUAL DESIGN</span>
         </a>
-        <a class="sidemenu__link--active" href="#">ABOUT</a>
+        <a class="sidemenu__link active" href="#">ABOUT</a>
       </div>
       <div class="main-visual flex-layout__main">
         <div class="main-visual__section">
