--- a/app/index.html
+++ b/app/index.html
@@ -25,18 +25,16 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="mailto:m.design1100@gmail.com">
         <span class="accordion-list__text fadein-under s45">00</span>
-        <span class="accordion-list__text fadein-under s45">m.design1100@gmail.com</span>
+        <span class="accordion-list__text--secondary fadein-under s45">m.design1100@gmail.com</span>
         <span class="accordion-list__text fadein-under s45">SAY HELLO !</span>
       </a>
     </div>
   </div>
 
   <header class="header">
-    <div class="logo">
-      <p class="logo__text">
-        MEI NAKAMURA PORTFOLIO
-      </p>
-    </div>
+    <h1 class="header__h1">
+      MEI NAKAMURA PORTFOLIO
+    </h1>
     <div class="menu-icon">
       <span class="menu-icon__bar"></span>
       <span class="menu-icon__bar"></span>
@@ -47,8 +45,8 @@
     <div class="sidemenu sidemenu--fix">
       <a class="sidemenu__link active" href="#">WORKS</a>
       <a class="sidemenu__link" href="#">
-        <span class="sidemenu__text-min">WEB DESIGN</span><br>
-        <span class="sidemenu__text-min">LOGO / ILLUSTRATION</span><br>
+        <span class="sidemenu__text-min">WEB DESIGN</span>
+        <span class="sidemenu__text-min">LOGO / ILLUSTRATION</span>
         <span class="sidemenu__text-min">VISUAL DESIGN</span>
       </a>
       <a class="sidemenu__link" href="#">ABOUT</a>
@@ -107,10 +105,10 @@
               <span class="visual-link__text">
                 LINE MOOK "in PINK HAPPY <br>
                 SECRET <br>
-        </div>
-              by BVLGARI"
-            </span>
-          </a>
+                by BVLGARI"
+              </span>
+            </a>
+          </div>
         </div>
       </div>
       <div class="top-visual">
