--- a/app/works.html
+++ b/app/works.html
@@ -25,7 +25,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="mailto:m.design1100@gmail.com">
         <span class="accordion-list__text fadein-under s45">00</span>
-        <span class="accordion-list__text fadein-under s45">m.design1100@gmail.com</span>
+        <span class="accordion-list__text--secondary fadein-under s45">m.design1100@gmail.com</span>
         <span class="accordion-list__text fadein-under s45">SAY HELLO !</span>
       </a>
     </div>
